@@ -311,7 +311,7 @@ static char *m4_defs(
   */
   /* first try to unlink it */
   unlink(tmp_name);
-  if ((fd = open(tmp_name, O_WRONLY|O_EXCL|O_CREAT, 0644)) < 0)
+  if ((fd = open(tmp_name, O_WRONLY|O_EXCL|O_CREAT, 0600)) < 0)
   {
     perror("exclusive open for output file failed in m4_defs");
     exit(0377);
