@@ -29,6 +29,11 @@ Changes in stable release 2.4.8 (not released yet)
 * Fixed a problem with fvwm not accepting keyboard input when the
   application with the focus vanished at the start of a session.
 
+* A small security patch regarding TMPDIR.
+
+* Fixed a problem with colormap transition when a transient window
+  died.
+
 Changes in stable release 2.4.7 (11-Apr-2002)
 
 * Fixed parsing of WindowList with conditions and a position at
